--- a/public/DASHBOARD.html
+++ b/public/DASHBOARD.html
@@ -366,6 +366,7 @@ async function handleGoogleLogin(response) {
         </button>
         <span id="debriefMsg" class="ml-2 text-sm opacity-80"></span>
       </div>
+   </div>
   
   <!-- CALL HISTORY -->
 <div id="callHistorySection" class="hidden app-section">
