--- a/public/DASHBOARD.html
+++ b/public/DASHBOARD.html
@@ -910,7 +910,6 @@ loginForm.addEventListener('submit', async (e) => {
     CURRENT_COACH_ID = String(resp.coachId);
     CURRENT_COACH_NAME = resp.coachName || CURRENT_COACH_ID;
     CURRENT_COACH_ROLE = resp.role;
-    console.log("DEBUG ROLE →", CURRENT_COACH_ROLE, resp);
     if (!CURRENT_COACH_ROLE) throw new Error("Ruolo coach non trovato. Contatta l'amministratore.");
 
     // Persist session
@@ -1909,7 +1908,8 @@ async function loadReportCardHistory() {
           if (!isNaN(dParsed)) ym = dParsed.toISOString().slice(0, 7);
         }
         return ym === filterValue;
-      } catch {
+      } 
+      catch {
         return false;
       }
     });
